// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`production ApplicationShellView retains shell, window strip, pane chrome, and canvas at %sx%s 1`] = `
"  ⌂  ●❯                                                                    live
  tmux              ● main    ● workin…                                       +
 ● main               ● Codex                  ● working  ⋯
 ○ website          CANONICAL-CELL

 Agents
 ● Codex [WORKING]



…

                     F6 Sessions  F7 Attention                      F5 Commands"
`;

exports[`production ApplicationShellView retains shell, window strip, pane chrome, and canvas at %sx%s 2`] = `
"   tmux-ide   ⌂ Home  ●❯ Terminals                                                                                 live
  tmux-ide                  ● main    ● workin…                                                            + New window
 ● main                       ● Codex                  ● working  ⋯
 ○ website                  CANONICAL-CELL

 Agents
 ● Codex [WORKING]



…

                             F6 Sessions  F7 Attention                                                      F5 Commands"
`;

exports[`production ApplicationShellView retains shell, window strip, pane chrome, and canvas at %sx%s 3`] = `
"   tmux-ide  F1  ⌂ Home  F2 ●❯ Terminals                                                                                                                                                           live
  tmux-ide                  ● main    ● workin…                                                                                                                                            + New window
 ● main                       ● Codex                  ● working  ⋯
 ○ website                  CANONICAL-CELL

 Agents
 ● Codex [WORKING]



…

                             F6 Sessions  F7 Attention                                                                                                                                      F5 Commands"
`;

exports[`production ApplicationShellView reacts palette geometry through narrow live resizes 1`] = `
"  ⌂  ●❯                live
 t  Command palette  esc
 m   Search commands…
 2    Home            F1
 C    Terminals       F2  …
      New terminal wind…


 ↑↓ Select      F5 Commands"
`;

exports[`production ApplicationShellView reacts palette geometry through narrow live resizes 2`] = `
"  ⌂  ●❯        live
 tCommand palette
 m …rch commands…
 2  Home        F1w
 C                …
                  …
  Commands F5"
`;

exports[`production ApplicationShellView preserves canonical attention while prioritizing mixed window activity 1`] = `
"   tmux-ide   ⌂ Home  ●❯ Terminals                                                                                 live
  tmux-ide                  ! main    ! workin…                                                            + New window
 ● main                       ● Codex                  ● working  ⋯   ! Scout                     ! idle
                            CANONICAL-CELL                          CANONICAL-CELL
 Agents
 ● Codex [WORKING]
 ! Scout ! [IDLE]



…

                             F6 Sessions  F7 Attention                                                      F5 Commands"
`;
